--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ Portfolio Styles
 
 /* Heading font */
 @font-face {
-    font-family: "GT Pressura Mono";
-    src: url("fonts/GT-Pressura-Mono-Regular.otf") format("opentype");
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-  }
+  font-family: "GT Pressura Mono";
+  src: url("./fonts/gt_pressura_mono/GT-Pressura-Mono-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
   
   :root {
     /* Colors */
