--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Portfolio Styles
 /* Heading font */
 @font-face {
   font-family: "GT Pressura Mono";
-  src: url("./fonts/gt_pressura_mono/GT-Pressura-Mono-Regular.otf") format("opentype");
+  src: url("/fonts/gt_pressura_mono/GT-Pressura-Mono-Regular.otf") format("opentype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
